tests/struct/redeclare_field.rev
struct Foo {
    a
    a // error: a field with the same name as already been declared in this scope
}